recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:9: error: '<-' expected but ')' found.
  for (i<0 to 3){
               ^FourSquare:14: error: illegal start of simple expression
} 
^